--- a/account-center/build.gradle
+++ b/account-center/build.gradle
@@ -15,6 +15,7 @@ configurations {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -32,9 +33,7 @@ dependencies {
     }
     testImplementation 'io.projectreactor:reactor-test'
 
-    // https://mvnrepository.com/artifact/junit/junit
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    compile group: 'li.jesse', name: 'volcano-common', version: '0.0.1'
 }
 
 test {
