--- a/namebook-account/src/main/resources/application-dev.yml
+++ b/namebook-account/src/main/resources/application-dev.yml
@@ -1,9 +1,10 @@
 mybatis:
   configuration:
-    map-underscore-to-camel-case: true
+    map-underscore-to-camel-case: on
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.31.101:3306/test?serverTimezone=Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: dev
     password: dev123
+
