--- a/namebook-account/src/main/resources/application-dev.yml
+++ b/namebook-account/src/main/resources/application-dev.yml
@@ -4,7 +4,18 @@ mybatis:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.31.101:3306/test?serverTimezone=Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mariadb://192.168.31.101:3306/serverTimezone=Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: dev
     password: dev123
+    hikari:
+      pool-name: xxx
+      minimum-idle: 5
+      idle-timeout: 180000
+      maximum-pool-size: 10
+      auto-commit: true
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
+
+
 
