--- a/namebook-account/build.gradle
+++ b/namebook-account/build.gradle
@@ -35,6 +35,12 @@ dependencies {
 
     compile 'li.jesse:volcano-common:0.0.1'
 
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
 
 }
 
