--- a/namebook-account/build.gradle
+++ b/namebook-account/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.1.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
 }
 
@@ -33,9 +33,6 @@ dependencies {
     }
     testImplementation 'io.projectreactor:reactor-test'
 
-//    compile 'li.jesse:volcano-common:0.0.1'
-//    compile 'zxx.zyy:u1:1.0'
-    compile group: 'zxx.zyy', name: 'u1', version: '1.0'
     compile group: 'li.jesse', name: 'volcano-common', version: '0.0.1'
 
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
@@ -43,6 +40,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.2.6.RELEASE'
 
 }
 
