--- a/namebook-account/src/main/resources/application-dev.yml
+++ b/namebook-account/src/main/resources/application-dev.yml
@@ -7,7 +7,8 @@ spring:
   application:
     name: namebook-account
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
     url: jdbc:mariadb://192.168.31.102:3306/namebook_account?serverTimezone=Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     type: com.zaxxer.hikari.HikariDataSource
     username: dev
