--- a/namebook-account/src/main/resources/application-dev.yml
+++ b/namebook-account/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl         # print sql log
 
 spring:
   application:
