--- a/namebook-backend/pom.xml
+++ b/namebook-backend/pom.xml
@@ -16,6 +16,10 @@
     <name>namebook-backend</name>
     <description>Namebook Backend</description>
 
+    <modules>
+        <module>nb-account</module>
+    </modules>
+
     <properties>
         <java.version>11</java.version>
         <charset>UTF-8</charset>
@@ -52,6 +56,29 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>li.jesse</groupId>
+            <artifactId>volcano-common</artifactId>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 
