--- a/namebook-backend/pom.xml
+++ b/namebook-backend/pom.xml
@@ -78,10 +78,17 @@
         </dependency>
 
         <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>li.jesse</groupId>
-            <artifactId>volcano-common</artifactId>
+            <artifactId>volcano</artifactId>
             <version>0.0.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
