--- a/namebook/nb-account/src/main/resources/application.yml
+++ b/namebook/nb-account/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+server:
+  port: 8081
+
 spring:
   profiles:
     active: dev
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  typeAliasesPackage: li.jesse.nbaccount.pojo
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl         # print sql log
